[package]
name = "winpty-sys"
version = "1.0.0"
description = "Rust winpty bindings"
repository = "https://github.com/rprichard/winpty"
readme = "README.md"
keywords = ["windows", "console", "tty", "winapi"]
categories = ["os::windows-apis", "external-ffi-bindings"]
license = "MIT"
links = "winpty"
build = "build.rs"
exclude = [
    "misc/*",
    "ship/*",
]

[lib]
path = "lib.rs"
name = "winpty_sys"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.33"