[package]
name = "winpty"
version = "0.2.0"
authors = ["Christian Duerr <contact@christianduerr.com", "Zac Pullar-Strecker <zacmps@gmail.com>"]
license = "MIT"
description = "Safe rust bindings for winpty"
edition = "2018"

[target.'cfg(windows)'.dependencies]
winpty_sys = { path = "./winpty_sys", version = "0.5.0" }
bitflags = "1.0"

[target.'cfg(windows)'.dev-dependencies]
named_pipe = "0.4.1"
winapi = { version = "0.3", features = ["winnt", "processthreadsapi"] }

[target.'cfg(windows)'.build-dependencies]
tempfile = "3.0.4"
http_req = "0.5"
zip = "0.5"
